<resources>
    <string name="app_name">login</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesi">Iniciar Sesión</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="logo">logo</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingrese_nombre">Ingrese su nombre de usuario</string>
    <string name="ingrese_contra">Ingrese su contrañesa</string>
    <string name="ingrese_su_rut">Ingrese su rut</string>
    <string name="ingrese_num">Ingrese el número de su casa</string>
    <string name="historial_de_uso">Historial de uso de portón</string>
    <string name="usuario">Usuario</string>
    <string name="accion">Acción</string>
    <string name="fecha">Fecha</string>
    <string name="juan">Juan</string>
    <string name="abrio">Abrio portón</string>
    <string name="fecha1">13/03/25 13:04</string>
    <string name="cerrar">Cerró portón</string>
    <string name="fecha2">13/03/25 13:07</string>
    <string name="abrir_porton">Abrir Portón</string>
    <string name="cerrar_porton">Cerrar portón</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="app_porton">App portón</string>
    <string name="tuerca">tuerca</string>
    <string name="configuracion">Configuración</string>
    <string name="apariencia">Apariencia</string>
    <string name="tema">Tema</string>
    <string name="tamano_letras">Tamaño letras</string>
    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
</resources>