<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/fondo"
    android:id="@+id/main"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/orange2"
        >
        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_porton"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:gravity="start"
            />

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/tuerca"
            android:src="@drawable/tuerca"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuracion"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="30sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apariencia"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tema"
            android:padding="8dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tamano_letras"
            android:padding="8dp"
            android:textSize="15sp"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Otros"
        android:padding="8dp"
        android:textStyle="bold"
        android:background="@color/grey"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_de_usuario"
            android:padding="8dp"
            android:textSize="15sp"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_contrasena"
            android:padding="8dp"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            android:padding="8dp"
            android:textSize="15sp"
            />
    </LinearLayout>

    <!-- Imagen inferior -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/img"
        android:layout_marginTop="16dp" />

</LinearLayout>
