<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio_sesion"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginVertical="50dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/nombre_de_usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/contrasena"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/iniciar_sesi"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/check"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/img" />

</LinearLayout>