<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="@color/orange2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_porton"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:gravity="start"
            />

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/tuerca"
            android:src="@drawable/tuerca"
            />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="155dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/blue"
            android:text="@string/abrir_porton"
             />
        <Button
            style="@style/Widget.Material3.Button.Icon"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/cerrar_porton"

            />
        <Button
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange2"
            android:text="@string/ver_historial"
            />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>